buildscript {
    repositories {
        mavenCentral()
        maven {
            url = 'https://maven.minecraftforge.net'
        }
        maven {
            url = 'https://repo.spongepowered.org/repository/maven-public'
        }
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
        classpath "org.spongepowered:mixingradle:${mixingradle_version}"
    }
}

apply plugin: 'net.minecraftforge.gradle'
// Only edit below this line, the above code adds and enables the necessary things for Forge to be set up.
apply plugin: 'eclipse'
apply plugin: 'maven-publish'
apply plugin: 'org.spongepowered.mixin'

version = minecraft_version + "-" + mod_version
// http://maven.apache.org/guides/mini/guide-naming-conventions.html
group = mod_group_id
archivesBaseName = "MellowUI"

// Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
java.toolchain.languageVersion = JavaLanguageVersion.of(17)

println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
minecraft {
    // The mappings can be changed at any time, and must be in the following format.
    // Channel:   Version:
    // snapshot   YYYYMMDD   Snapshot are built nightly.
    // stable     #          Stables are built at the discretion of the MCP team.
    // official   MCVersion  Official field/method names from Mojang mapping files

    // You must be aware of the Mojang license when using the 'official' mappings.
    // See more information here: https://github.com/MinecraftForge/MCPConfig/blob/master/Mojang.md

    // Use non-default mappings at your own risk, they may not always work!
    // Simply re-run your setup task after changing the mappings to update your workspace.
    mappings channel: 'official', version: '1.18.2'
    // A SRG named sources jar is made by default. Uncomment this to disable.
    // makeObfSourceJar = false

    // This property enables access transformers for use in development, which will be applied to the Minecraft artifact.
    // The access transformer file can be anywhere in the project. However, it must be at "META-INF/accesstransformer.cfg" in the final mod jar to be loaded by Forge.
    // This default location is a best practice to automatically put the file in the right place in the final jar.
    // See https://docs.minecraftforge.net/en/latest/advanced/accesstransformers/ for more information.
    // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    // Default run configurations.
    // These can be tweaked, removed, or duplicated as needed.
    runs {
        // Applies to all run configurations below.
        configureEach {
            workingDirectory project.file('run')

            // Recommended logging data for a user development environment.
            // The markers can be added/removed as needed, and are separated by commas.
            // "SCAN": For mods scan.
            // "REGISTRIES": For firing of registry events.
            // "REGISTRYDUMP": For getting the contents of all registries.
            property 'forge.logging.markers', 'REGISTRIES'

            // Recommended logging level for the console.
            // You can set various levels here.
            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
            property 'forge.logging.console.level', 'debug'

            // Disables the reference map for mixins.
            property 'mixin.env.disableRefMap', 'true'

            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        client {
            // Copied from Tinker's Construct repository.
            if (project.hasProperty('mc_uuid')) {
                // Your uuid without any dashes in the middle.
                args '--uuid', project.getProperty('mc_uuid')
            }
            if (project.hasProperty('mc_username')) {
                // Your username/display name, this is the name that shows up in chat.
                // Note: This is not your email, even if you have a Mojang account.
                args '--username', project.getProperty('mc_username')
            }

            // args '--demo'

            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
            property "mixin.debug.export", "true"
        }

        // This run config launches GameTestServer and runs all registered game tests, then exits.
        // By default, the server will crash when no game tests are provided.
        // The game test system is also enabled by default for other run configs under the /test command.
        gameTestServer {
            args '--nogui'
        }

        server {
            args '--nogui'
        }

        data {
            // Specify the mod id for data generation, where to output the resulting resources, and where to look for existing resources.
            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
        }
    }
}

mixin {
    add sourceSets.main, "mellowui.refmap.json"
}

// Include resources generated by data generators.
sourceSets.main.resources {
    srcDir 'src/generated/resources'
}

dependencies {
    // Specify the Minecraft version to use.
    // If this is any group other than 'net.minecraft', it is assumed that the dep is a ForgeGradle 'patcher' dependency, and its patches will be applied.
    // The user development (user development) artifact is a special name and will get all sorts of transformations applied to it.
    // If the group id is "net.minecraft" and the artifact id is "client", "server" or "joined", then special handling is done to allow a setup of a vanilla dependency without the use of an external repository.
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"

    // Annotation Processors
    annotationProcessor "org.spongepowered:mixin:${mixin_version}:processor"

    // You may put jars on which you depend on in ./libs, or you may define them like so:
    // compile "some.group:artifact:version:classifier"
    // compile "some.group:artifact:version"

    // Real examples:
    // compile 'com.mod-buildcraft:buildcraft:6.0.8:dev' // Adds Buildcraft to the development environment.
    // compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // Adds EJML (Efficient Java Matrix Library) to the development environment.

    // The 'provided' configuration is for optional dependencies that exist at compile-time but might not at runtime.
    // provided 'com.mod-buildcraft:buildcraft:6.0.8:dev'

    // These dependencies get remapped to your current MCP mappings:
    // deobf 'com.mod-buildcraft:buildcraft:6.0.8:dev'

    // For more information, see:
    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
    // http://www.gradle.org/docs/current/userguide/dependency_management.html
}

// Example for how to get properties into the manifest for reading by the runtime:
jar {
    manifest {
        attributes([
            "Specification-Title": mod_name,
            "Specification-Vendor": mod_authors,
            // We are version 1 of ourselves.
            "Specification-Version": "1",
            "Implementation-Title": project.name,
            "Implementation-Version": "${version}",
            "Implementation-Vendor": mod_authors,
            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
            "MixinConfigs": 'mellowui.mixins.json'
        ])
    }
}

// Example configuration to allow publishing using the maven-publish task.
// This is the preferred method to reobfuscate your jar file.
jar.finalizedBy('reobfJar') 
// However if you are in a multi-project build, development time needs unobfuscated jar files, so you can delay the obfuscation until publishing by doing
// publish.dependsOn('reobfJar')

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file:///${project.projectDir}/mcmodsrepo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    // Use the UTF-8 charset for Java compilation.
    options.encoding = 'UTF-8'
}